# buildozer

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  buildozer.bzl  buildozer.sh  buildozer_binary.bzl
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: publish.yaml  release.yml  release_prep.sh  test.yml
private/: BUILD.bazel  buildozer.template.bat  buildozer.template.sh  buildozer_binary.bzl
release/: BUILD.bazel  release.sh  update.sh
tests/: BUILD.bazel  MODULE.bazel  deps.bzl  no_deps_test.sh  run_buildozer.sh
tests/bcr/: BUILD.bazel  MODULE.bazel  deps.bzl
tests/bcr/bazel_run_test/: BUILD.bazel  bazel_run_test.sh
tests/repo_rule_test/: BUILD.bazel
