sh_binary(
    name = "buildozer",
    srcs = ["buildozer.sh"],
    data = [
        "@buildozer_binary//:buildozer.exe",
    ],
    env = {
        "BUILDOZER_RLOCATIONPATH": "$(rlocationpath @buildozer_binary//:buildozer.exe)",
    },
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

exports_files(["buildozer.bzl"])

exports_files(
    ["MODULE.bazel"],
    visibility = ["//tests:__subpackages__"],
)
