# A buildozer binary that will run in the root repository's workspace directory.
alias(
    name = "buildozer",
    actual = "@buildozer_binary//:source_buildozer",
    visibility = ["//visibility:public"],
)

exports_files(["buildozer.bzl"])

exports_files(
    ["MODULE.bazel"],
    visibility = ["//tests:__subpackages__"],
)
