load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# A buildozer binary that will run in the root repository's workspace directory
# when executed with `bazel run`.
# Can be aliased or used as a data dependency of other targets executed via
# `bazel run`.
sh_binary(
    name = "buildozer",
    srcs = ["buildozer.sh"],
    data = [
        "@buildozer_binary//:buildozer.exe",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

exports_files(["buildozer.bzl"])

exports_files(
    ["MODULE.bazel"],
    visibility = ["//tests:__subpackages__"],
)
