module(
    name = "buildozer",
    version = "6.3.3",
    bazel_compatibility = [">=6.2.0"],
)

buildozer_binary = use_extension("//:buildozer_binary.bzl", "buildozer_binary")
buildozer_binary.buildozer(
    sha256 = {
        "darwin-amd64": "9b0bbecb3745250e5ad5a9c36da456699cb55e52999451c3c74047d2b1f0085f",
        "darwin-arm64": "085928dd4deffa1a7fd38c66c4475e37326b2d4942408e8e3d993953ae4c626c",
        "linux-amd64": "1dcdc668d7c775e5bca2d43ac37e036468ca4d139a78fe48ae207d41411c5100",
        "linux-arm64": "94b96d6a3c52d6ef416f0eb96c8a9fe7f6a0757f0458cc8cf190dfc4a5c2d8e7",
        "windows-amd64": "fc1c4f5de391ec6d66f2119c5bd6131d572ae35e92ddffe720e42b619ab158e0",
    },
)
use_repo(buildozer_binary, "buildozer_binary")
