load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "no_deps_test",
    srcs = ["no_deps_test.sh"],
    data = [
        "//:MODULE.bazel",
        "@buildozer_binary//:buildozer.exe",
    ],
    env = {
        "BUILDOZER": "$(rootpath @buildozer_binary//:buildozer.exe)",
    },
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
